src/main/k8s.manual/010-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: khool-session-manual
spec:
  finalizers:
  - kubernetes
