src/main/k8s.manual/020-deploy.yaml
#
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: null
  generation: 1
  labels:
    run: khool-session
  name: khool-session
  namespace: khool-session-manual
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: khool-session
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: khool-session
    spec:
      containers:
      - image: khool-session-manual:0.2
        imagePullPolicy: IfNotPresent
        name: khool-session
        ports:
        - containerPort: 8080
          name: http-tomcat
          protocol: TCP
      #### Section for jgroup clustering
        - containerPort: 4000
          name: nio-receiver
          protocol: TCP
        - containerPort: 45564
          name: m-cast-service
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 5
status: {}
